Title, Header, Article, Footer
Changed Title
Added Header
Added First Article and information
Added Footer with personal information

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travelogue:</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <h1>Important Places in Punjab India</h1>
+        </header>
+        <article>
+            <h2>The Golden Temple</h2>
+            <p>The Golden Temple is one of the most important places in Punjab, India.</p>
+        </article>
+        <footer>
+            <p>
+                Harkirat.Dhillon@edu.sait.ca Southern Alberta Institute of Technology
+            </p>
+        </footer>
+    </main>
 </body>
 </html>
