Updated First Paragraph
Added in more information for the paragraph for the Golden Temple.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </header>
         <article>
             <h2>The Golden Temple</h2>
-            <p>The Golden Temple is one of the most important places in Punjab, India.</p>
+            <p>The Golden Temple is located in Amritsar, Punjab, India and is one of the most important religious in Punjab.The Golden Temple holds one of the largest community free kitchen for everyone who goes to the Golden Temple whether they are Sikh People going to pray or are tourists wanting to know more about One of the most important religious sites in Punjab.</p>
         </article>
         <footer>
             <p>
