--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Travelogue:</title>
 </head>
 <body>
-    <main>
-        
+    <main> 
         <header>
             <h1>Important Places in Punjab India</h1>
         </header>
@@ -15,7 +14,7 @@
         <article>
             <h2>The Golden Temple</h2>
             <p>
-                The Golden Temple is located in Amritsar, Punjab, India and is one of the most important religious in Punjab.The Golden Temple holds one of the largest community free kitchen for everyone who goes to the Golden Temple whether they are Sikh People going to pray or are tourists wanting to know more about one of the most important religious sites in Punjab. Many Sikh people go to the Golden Temple for it's importance in Sikh history and religion. When going to the Golden Temple people can see that there are 4 entryways to the temple to signify that people from all walks of life are welcome in the Golden Temple.
+                The Golden Temple is located in Amritsar, Punjab, India and is one of the most important religious in Punjab.The Golden Temple holds one of the largest community free kitchen for everyone who goes to the Golden Temple whether they are Sikh People going to pray or are tourists wanting to know more about one of the most important religious sites in Punjab. Many Sikh people go to the Golden Temple for it's importance in Sikh history and religion. When going to the Golden Temple people can see that there are 4 entryways to the temple to signify that people from all walks of life are welcome in the Golden Temple. Part of the Golden Temple does have damage around the parts of it due to the Blue Star operation done by the military in the hopes of locating suspected terrorists. If you are considering going to the Golden Temple in Amritsar you should know that you must have your headcovered and have your shoes off because it is still a major part of the Sikh people's religion and a holy site. So to show respect to the Sikh people, anyone going to the Golden Temple must have their heads covered and take their shoes off. If you don't have a headcovering there are headcoverings for you to use provided by the Golden Temple aslong as you return them and put them in the box that says "used".
             </p>
         </article>
         
