--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <article>
             <h2>Genesis Centre</h2>
-            <img src="/Images/Genesis Centre.jpg" alt="The main front entrance of the Genesis Centre">
+            <img src="/Images/Genesis_Centre.jpg" alt="The main front entrance of the Genesis Centre">
             <p>
                 Placeholder text
             </p>
