Finished Banff Article
I have added in the paragraph for the Banff article

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Banff</h2>
             <img src="/Images/Banff_Mountains.jpg" alt="Banff Mountains">
             <p>
-                Placeholder text
+                Banff is a town that has quite a bit of greenery in it's surroundings it was also seen as one of the most beautiful and visited places in the world. Banff also has a lot of variety of foods ranging from Indian to Chinese style foods due to people from many different types of people come to vist Banff. When I went to Banff I went on the gondala and was stunned by how many mountains were there once I had gotten up to a certain point and was able to see how far the mountains went. Banff also has a nice hiking trail people can go on that lasts for quite a bit of time and has many maps around to help those who may not know where they are directly and help them on the right path. Also there are some customization shops in Banff for various different types of merchandise that people can customize for themselves or for their loved ones. When going to Banff it is ideal to know that there will be many pre-weddings in Banff since it one of the most visited places in Alberta and has many nice views for wedding photo, so it would be important to understand that if you are visiting Banff that there will be many people setting up for pre-weddings which might feel like it is getting in the way of seeing the rest of Banff when going there. 
             </p>
         </article>
         
